applications/base/ingress/catalog-iiif-presentation-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-iiif-presentation-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.local.nb.no
    http:
      paths:
      - path: /catalog/(v1|v3).*/iiif
        pathType: Prefix
        backend:
          service:
            name: catalog-iiif-presentation-service
            port:
              number: 8011
