applications/base/ingress/catalog-item-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-item-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.local.nb.no
    http:
      paths:
      - path: /catalog/v1/(items|search|aggregations|musicsearch).*
        pathType: Prefix
        backend:
          service:
            name: catalog-item-service
            port:
              number: 8004
